[package]
name = "render"
version = "0.1.0"
authors = ["Matthias Endler <matthias-endler@gmx.net>"]
edition = "2018"

[dependencies]
serde = "1.0.123"
serde_derive = "1.0.111"
serde_yaml = "0.8.17"
askama = "0.10.5"
hubcaps = "0.6"
tokio = { version = "0.2", features = ["macros"] }
chrono = "0.4.19"
anyhow = "1.0.38"
pico-args = "0.4.0"
